tests/compiler/case_exhaustiveness_boolean_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/case_exhaustiveness_boolean_1.kk:4:4
  │
4 │   \(_, _) => false
  │    ^^^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.

